<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Handheld dictionary</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_description_add">Add</string>
    <string name="edit_foreign_hint">Word</string>
    <string name="edit_translate_hint">Translate</string>
    <string name="edit_name_hint">Name</string>
    <string name="edit_save_button">Save</string>

    <string name="action_save">Export to file</string>

    <string name="navigation_drawer_item_all">All words</string>
    <string name="navigation_drawer_item_group">Groups</string>
    <string name="navigation_drawer_item_check">Check</string>
    <string name="navigation_drawer_item_import_export">Import/Export</string>

    <string name="content_description_ic_all">all words</string>
    <string name="content_description_ic_group">groups</string>
    <string name="content_description_ic_check">check</string>
    <string name="content_description_ic_import_export">import/export</string>

    <string name="navigation_drawer_open_drawer_description">Open menu</string>
    <string name="navigation_drawer_close_drawer_description">Close menu</string>

    <string name="button_import">Import</string>
    <string name="button_export">Export</string>

    <string name="export_success_message">Dictionary successful exported: %1$s</string>

    <string name="export_success_notification_title">Export completed.</string>
    <string name="start_importing">Importing…</string>
    <string name="start_exporting">Exporting…</string>

    <string name="choose_file_error">Can\'t choose file, Please install a File Manager.</string>

    <string name="unsupported_file_format">Import Failed: Unsupported file format</string>
    <string name="file_not_exist">Import Failed: File doesn\'t exist</string>
    <string name="nothing_selected">Select any group with words</string>
    <string name="begin_button">Begin</string>

    <string name="group_create_title">Add group</string>
    <string name="group_edit_title">Edit group</string>

    <string name="word_create_title">Add word</string>
    <string name="word_edit_title">Edit word</string>
    <string name="content_description_edit">Edit</string>
    <string name="content_description_remove">Remove</string>

    <string name="empty_list">Nothing to see here =( Try to add!</string>
    <string name="common_error">An error has occurred =( Please, try again.</string>

    <string name="try_again">Try again</string>
    <string name="pager_shuffle">Shuffle</string>
    <string name="pager_swap">Swap</string>

    <string name="shuffled">Shuffled</string>
    
    <string name="swap_done_prefix">Translate is</string>
    <string name="swap_done_suffix_translate_showing">showing</string>
    <string name="swap_done_suffix_translate_hiding">hiding</string>

    <string name="select_group">Select group</string>

</resources>
