<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <se.emilsjolander.stickylistheaders.StickyListHeadersListView
        android:id="@+id/all_groups_word_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1dp"/>

    <FrameLayout
        android:id="@+id/all_groups_word_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.dmitry.handheld_dictionary.ui.view.TypefaceTextView
            style="@style/ServiceText"
            android:text="@string/empty_list"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/all_groups_word_list_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.example.dmitry.handheld_dictionary.ui.view.TypefaceTextView
            style="@style/ServiceText"
            android:text="@string/common_error"/>

        <Button
            android:id="@+id/all_groups_word_list_retry"
            style="@style/CommonButton"
            android:text="@string/try_again"/>

    </LinearLayout>

</FrameLayout>