<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background">

    <ListView
        android:id="@+id/one_group_word_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1dp"/>

    <FrameLayout
        android:id="@+id/one_group_word_list_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.nikitin_da.sticky_dictionary.ui.view.TypefaceTextView
            style="@style/ServiceText"
            android:text="@string/empty_list"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/one_group_word_list_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.github.nikitin_da.sticky_dictionary.ui.view.TypefaceTextView
            style="@style/ServiceText"
            android:text="@string/common_error"/>

        <Button
            android:id="@+id/one_group_word_list_retry"
            style="@style/CommonButton"
            android:text="@string/try_again"/>

    </LinearLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/one_group_word_list_add"
        style="@style/FloatActionButton.Word"/>

</FrameLayout>